<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APP NAME -->
    <string name="app_name" translatable="false">Talks</string>

    <!-- Stringhe Layout -->
    <string name="real_name">Name</string>
    <string name="real_surname">Surname</string>
    <string name="email_address">E-mail address</string>
    <string name="password_requirement">minimum: 6 characters</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="join_now_1">Don\'t have an account?</string>
    <string name="join_now_2">Join Talks now!</string>
    <string name="talk_hint">Insert here your Talk message</string>
    <string name="link_hint">Insert here the Source</string>
    <string name="log_in">LOG-IN</string>
    <string name="sign_in">SIGN-IN</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="new_post">NEW TALK</string>
    <string name="submit">SUBMIT</string>
    <string name="template_nickname" translatable="false">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
    <string name="template_content" translatable="false">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
    <string name="insert_image">INSERT\nIMAGE</string>
    <string name="remove_image">REMOVE\nIMAGE</string>
    <string name="search_user_hint">search user</string>


    <!-- Stringhe Toast -->
    <string name="talkSent">Talk successfully sent</string>
    <string name="loginOK">Access allowed</string>
    <string name="loginKO">Access denied</string>
    <string name="SignInOK">User successfully registered</string>
    <string name="SignInKO">Unable to register user</string>
    <string name="ImageUpdated">Account picture successfully updated</string>
    <string name="ImageNotUpdated">Unable to update account picture</string>
    <string name="ImageRemoved">Account picture successfully removed</string>
    <string name="ImageNotRemoved">Unable to remove account picture</string>
    <string name="talkDeletedOK">Talk successfully removed</string>
    <string name="talkDeletedKO">Unable to remove selected Talk</string>

    <!-- Stringhr Popup -->
    <string name="switchToNight">Switch to Night Mode</string>
    <string name="switchToLight">Switch to Light Mode</string>
    <string name="changePicture">Change account picture</string>
    <string name="removeAccountPicture">Remove account picture</string>
    <string name="logOut">LOGOUT</string>

    <!-- Stringhe Error -->
    <string name="invalidEmail">Invalid email</string>
    <string name="talkTooShort">Warning, the talk must be at least $ characters</string>
    <string name="talkTooLong">Warning, the talk limit is $ characters</string>
    <string name="minChar">minimum: $ characters</string>
    <string name="maxChar">maximum: $ characters</string>
    <string name="duplicateNickname">nickname: $ already registered</string>
    <string name="notFound">"not found"</string>

    <!-- Stringhe -->
    <string name="immagine_schermata_login" translatable="false">login_image</string>
    <string name="immagine_schermata_profilo" translatable="false">profile_image</string>
    <string name="button" translatable="false">Button</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="profile_list_title" translatable="false">PROFILE LIST</string>
</resources>