<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Registrazione">

    <!-- TEXT VIEW TALKS-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="@color/orange_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TIL_RealNameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TEXT FIELD NAME -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_RealNameReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/real_name"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/TIL_RealSurnameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TF_RealNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- TEXT FIELD SURNAME -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_RealSurnameReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/real_surname"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/TIL_EmailReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_RealNameReg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TF_RealSurnameReg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- TEXT FIELD EMAIL -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_EmailReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/TIL_PasswordReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_RealSurnameReg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TF_EmailReg"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- TEXT FIELD PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_PasswordReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/TIL_NicknameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_EmailReg"
        app:helperTextEnabled="true"
        app:helperText="@string/password_requirement">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TF_PasswordReg"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- TEXT FIELD NICKNAME -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_NicknameReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/B_SubmitReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_PasswordReg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TF_NicknameReg"
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- SUBMIT BUTTON -->
    <Button
        android:id="@+id/B_SubmitReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_orange"
        android:onClick="checkValueReg"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_NicknameReg" />
</androidx.constraintlayout.widget.ConstraintLayout>