<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout_Profilo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Profilo">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/SingleUserTalksRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/immagine_Profilo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/default_account_image"
                android:contentDescription="@string/immagine_schermata_profilo"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_NicknameProfilo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/nickname"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TV_NomeProfilo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/real_name"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TV_CognomeProfilo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/real_surname"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SingleUserTalksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>