<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".NewTalk">

    <TextView
        android:id="@+id/TV_newPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textColor="@color/orange_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TIL_testoTalk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_testoTalk"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/talk_hint"
        android:inputType="textLongMessage|textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/default_primary_text"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutChild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_newPost">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_testoTalk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutChild"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/IV_selectedImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_testoTalk">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_linkSource"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:baselineAligned="false"
            android:hint="@string/link_hint"
            android:inputType="textLongMessage"
            android:textAlignment="center"
            android:textColor="@color/default_primary_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_linkSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/B_imageManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style_gray"
                android:onClick="getPicture"
                android:text="@string/insert_image"
                android:textSize="12sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/B_imageRemover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_red"
                android:onClick="removeImage"
                android:text="@string/remove_image"
                android:textSize="12sp"
                android:visibility="invisible"
                app:backgroundTint="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/IV_selectedImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/B_UploadPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutChild"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/B_UploadPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_orange"
        android:onClick="createNewTalk"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_selectedImg" />

</androidx.constraintlayout.widget.ConstraintLayout>