<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayoutProfilo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_profilo_xml_constraintlayout_scene">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/SingleUserTalksRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/IV_ProfileIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_NicknameProfilo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/nickname"
                    android:textColor="@color/default_primary_text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TV_NomeProfilo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/real_name"
                    android:textColor="@color/default_secondary_text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TV_CognomeProfilo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/real_surname"
                    android:textColor="@color/default_secondary_text"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SingleUserTalksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>